--- a/astra.html
+++ b/astra.html
@@ -254,7 +254,7 @@
               <div class="col-md-4">
                 <div class="card border-0 text-center p-5 project_screen_section-gray">
                   <img
-                    src="img/astra/persona1.png"
+                    src="img/astra/Persona1.png"
                     class="card-img-top img-circle m-auto w-auto"
                     alt=""
                   />
@@ -289,7 +289,7 @@
               <div class="col-md-4">
                 <div class="card border-0 text-center p-5 project_screen_section-gray">
                   <img
-                    src="img/astra/persona2.png"
+                    src="img/astra/Persona2.png"
                     class="card-img-top img-circle m-auto w-auto"
                     alt=""
                   />
@@ -324,7 +324,7 @@
 			     <div class="col-md-4">
                 <div class="card border-0 text-center p-5 project_screen_section-gray">
                   <img
-                    src="img/astra/persona3.png"
+                    src="img/astra/Persona3.png"
                     class="card-img-top img-circle m-auto w-auto"
                     alt=""
                   />
