--- a/shawdowIT.html
+++ b/shawdowIT.html
@@ -211,7 +211,7 @@
 				were noted down the obeservations.</p>			
 				<ul class="list-unstyled">
                         <li><strong>Key insights:</strong></li>
-                        <li>- Overwhelmin data - User specific data is desired </li>
+                        <li>- Overwhelming data - User specific data is desired </li>
                         <li>- For employee, its very hard to understand & identify their incident which has converted into a problem.</li>
                         <li>- The information hierarchy is not so good. Everthing looks equally important.</li>
                         <li>- The flows are very confusing.</li>
