--- a/vd.html
+++ b/vd.html
@@ -90,7 +90,7 @@
                 <div class="card-body">
                   <h5 class="card-title title">Vision Demonstrators</h5>
                   <p class="card-text note">
-                     Are ‘visions’ for our various customers
+                     ‘Visions’ for our various customers
                   </p>
                   <p class="card-text myrole">
                     <span><b>Role:</b> Designer</span>
