--- a/shawdowIT.html
+++ b/shawdowIT.html
@@ -179,7 +179,7 @@
             <div>
               <span class="project_screen_section_caption_character">''</span>
               <span
-                >How might technology help business and employees make their work easier, faster and secure?
+                >How might Shadow IT help business and employees make their work easier, faster and secure?
                 </span
               >
             </div>
