--- a/shawdowIT.html
+++ b/shawdowIT.html
@@ -213,7 +213,7 @@
                         <li><strong>Key insights:</strong></li>
                         <li>- Overwhelming data - User specific data is desired </li>
                         <li>- For employee, its very hard to understand & identify their incident which has converted into a problem.</li>
-                        <li>- The information hierarchy is not so good. Everthing looks equally important.</li>
+                        <li>- The information hierarchy is not so good. Everything looks equally important.</li>
                         <li>- The flows are very confusing.</li>
                         <li>- There are multiple ways to perform a task. But, none of them are proving a good experience.</li>
                       </ul>
