--- a/shawdowIT.html
+++ b/shawdowIT.html
@@ -220,7 +220,7 @@
 				 				
 				<h5>3. User surveys analysis</h5>
                 <p>
-               We did survey of government and corporate 
+               Stakeholder did survey of government and corporate 
 			   office workers in Boston and Washington, D.C. to gather anonymous selfreports 
 			   of work-related security behaviors and attitudes.</br></br>
 			   One insight <b>we learned was that as per study reported that 
